[gd_scene load_steps=6 format=3 uid="uid://ccm8cvppgh0u4"]

[ext_resource type="Script" path="res://scenes/UI/tbpositioning.gd" id="1_d1ttt"]
[ext_resource type="Script" path="res://scripts/UI/textbox.gd" id="1_d02aa"]
[ext_resource type="Texture2D" uid="uid://dpo36lorlh1qv" path="res://art/UI/textbox.png" id="1_jux8l"]
[ext_resource type="FontFile" uid="uid://dfcur1am0jjb4" path="res://components/mitochondria.ttf" id="4_qd6mo"]
[ext_resource type="Texture2D" uid="uid://duo8q48sgxglk" path="res://art/UI/queentextbox.png" id="4_s4kc6"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.8, 0.8)
script = ExtResource("1_d1ttt")

[node name="Textbox" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 16.0
offset_bottom = 35.0
grow_horizontal = 2
script = ExtResource("1_d02aa")

[node name="Regular" type="NinePatchRect" parent="Textbox"]
layout_mode = 2
texture = ExtResource("1_jux8l")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Player" type="NinePatchRect" parent="Textbox"]
visible = false
layout_mode = 2
texture = ExtResource("4_s4kc6")
region_rect = Rect2(0, 0, 52, 52)
patch_margin_left = 16
patch_margin_top = 19
patch_margin_right = 20
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="Textbox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="Textbox/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(3.76021e-09, 0.0432832, 0.0140676, 1)
theme_override_fonts/font = ExtResource("4_qd6mo")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
justification_flags = 0

[node name="LetterDisplayTimer" type="Timer" parent="Textbox"]
one_shot = true

[connection signal="minimum_size_changed" from="Textbox" to="." method="_on_textbox_minimum_size_changed"]
[connection signal="timeout" from="Textbox/LetterDisplayTimer" to="Textbox" method="_on_letter_display_timer_timeout"]
